# fdebug

./: API_REFERENCE.md  API_REFERENCE_VI.md  CHANGELOG.md  CHANGELOG_DETAILED.md  Cargo.toml  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_PACKAGE.md  INTEGRATION_GUIDE.md  INTEGRATION_GUIDE_VI.md  LICENSE  MODULE_API_REFERENCE.md  README.md  README_VI.md  TECHNICAL_AUDIT.md  build.rs  build_errors.txt  output.txt
docs/: ARCHITECTURE_LAYER5.md  BUILD_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  README_UPDATES.md  UPDATES.md  architecture_guide_NEW.md  implementation_guide_NEW.md  reference_guide_NEW.md
examples/: basic_protection.rs  custom_vm_op.rs  guarded_logic.rs  stealth_system.rs
src/: lib.rs  main.rs
src/protector/: anti_debug.rs  anti_dump.rs  copyright.txt  decoy_system.rs  enhanced_veh.rs  generated_constants.rs  global_state.rs  hardware_entropy.rs  mod.rs  pe_integrity.rs  seed_orchestrator.rs  tiny_vm.rs
src/protector/tiny_vm/: generated_constants.rs
