[package]
name = "fuckDebug"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
windows = { version = "0.51", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus", "Win32_Storage_FileSystem", "Win32_System_LibraryLoader", "Win32_Security", "Win32_System_Kernel", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp"] }
lazy_static = "1.4"

[[bin]]
name = "fuckDebug"
path = "src/main.rs"
